# Firework-Simulation-Game

./: .gitignore  CMakeLists.txt  LICENSE  Project Report (in Chinese).md  README.md  Run&Debug.md  计算机图形学期末项目报告.md
code/include/Animation/: Animation_0.h
code/include/Particles/: Emitter.h  Particle_Emitter.h
code/include/World/: Camera_GLFW.h  Model.h
code/src/: CMakeLists.txt  glad.c
code/src/Animation/: Animation_0.cpp
code/src/Fireworks/: bloom.cpp
code/src/Particles/: Emitter_Render.cpp  Particle_Emitter.cpp
code/src/test_demo/: video_demo.cpp
include/Animation/: Animation.h  Animation_0.h
include/Fireworks/: Firework.h  Firework_Manager.h  Firework_Pipeline.h  Path_Generator.h  Pipe_Firework_Manager.h  Sound_Player.h  bloom.h  circle_firework.h  firework_render.h  particle.h  particle_render.h
include/Lib_Include/glad/: glad.h
include/Object/: Character.h  Cube.h  Vertex_Manager.h  World.h
include/OpenGLTools/: Background.hpp  Camera_GLFW.h  Camera_SDL.h  FireBox.hpp  Firework_Viewer.h  ICamera.h  Shader.h  SkyBox.hpp  environment.h
include/Particles/: Emitter.h  Emitter_Render.h  Emitter_Updater.h  Particle_Emitter.h  Particle_Utils.hpp
include/Sound/: Sound_Player.h
include/World/: Background.hpp  Firework_Viewer.h  Mesh.h  SkyBox.hpp  environment.h
release/Object/rocket_v3_l1/: 12215_rocket_v3_l1.mtl
release/Object/scence/: sample town.mtl
release/Shaders/: background.fs  gauss.vs  insert_model.vs  particle.vs  screen.fs
src/: CMakeLists.txt
src/Animation/: Animation.cpp  Animation_0.cpp  CMakeLists.txt
src/Fireworks/: CMakeLists.txt  Firework.cpp  Firework_Manager.cpp  Firework_Pipeline.cpp  Path_Generator.cpp  Pipe_Firework_Manager.cpp  bloom.cpp  circle_firework.cpp  firework_render.cpp  particle.cpp  particle_render.cpp
src/Object/: CMakeLists.txt  Character.cpp  Cube.cpp  Vertex_Manager.cpp  World.cpp
src/OpenGLTools/: CMakeLists.txt  Camera_GLFW.cpp  Camera_SDL.cpp  Firework_Viewer.cpp  ICamera.cpp  Mesh.cpp  Model.cpp  Shader.cpp
src/Particles/: CMakeLists.txt  Emitter.cpp  Emitter_Render.cpp  Emitter_Updater.cpp  Particle_Emitter.cpp
src/Sound/: CMakeLists.txt  Sound_Player.cpp
src/World/: CMakeLists.txt  Camera_GLFW.cpp  Firework_Viewer.cpp  Shader.cpp
src/test_demo/: CMakeLists.txt  firework_demo.cpp  video_demo.cpp
src/test_demo/glfw_demo/: demo_glfw.cpp
src/test_demo/sdl_demo/: demo_sdl.cpp  demo_sdl_2.cpp  emitter_demo.cpp  firework_0.cpp  firework_demo.cpp
